Allows more permissive entries in working hours
Update DataTable libraries and remove flash buttons
Use APP_ENV in legacy code (config.php) and move uploaded files
Upgrade PHP to 7.4 in composer.json
Update install.sh : check if PHP version > 7.4, run composer update if needed
Upgrade symfony/flex to release 1.9.8
Start handling permissions in a YAML file


-Fixes
Remove HTML entities in closing days
Working hours fixes
Add validate icon
Use PHP default timezone.
Keep absence's other reason when there is recurrence
Fix display of agents on vacation on the week schedules
Prevent warnings in script tools/remove_html_entities_from_absences_reasons.php
Prevent the redirection to the 'access denied' page on cli and symfony mode
Replace heredoc string by double quotes string at end of weekly
planning

*** Version 20.10.00       (2020-10-09)   ***
- Enhancements
Add working hours exceptions
Retrieve absences from microsoft graph API
Add a cron script to purge the log table: planningBibio:PurgeLogTable
Check journey times between site / areas
Having "Full day" checked by default in absences is configurable
Check journey times between absences and jobs
Enable web profiler on dev environment
Symfonisation of admin -> activites
Use Doctrine ORM for skill pages
Use fine tuning of hours in holidays forms
Mass modification of agents
Symfonize agenda/index page
Stick planning times row and job columns
Symfonize and Doctrinize postes/index.php

-Fixes
Use fine tuning of hours in absence forms
Fix the control of plannings when an absence is recorded
Fix removal of reccuring absences
Set default value for start and end hours when saving an absence
Fix admin info and absences info forms
fix retrieving of start hour when adding absence
Prevent duplicating working hours via clone option

*** Version 20.04.00       (2020-06-15)   ***
- Enhancements
Include symfony framework
Move absences pages into a symfony controller
Move absences/info pages into a symfony controller